project('aoc', 'cpp', default_options: ['cpp_std=c++17'] )
src = [ 'main.cpp', 'util.cpp',
        'day1.cpp', 'day2.cpp', 'day3.cpp', 'day4.cpp', 'day5.cpp', 'day6.cpp', 'day7.cpp', 'day8.cpp',
	'day9.cpp', 'day10.cpp', 'day11.cpp', ]
sdl2 = dependency('sdl2')
executable('aoc', sources: src, dependencies: sdl2)
